# FoxEngine

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
libs/: CMakeLists.txt
libs/fox_graphics/: CMakeLists.txt
libs/fox_graphics/include/fox/: environment.hpp
libs/fox_graphics/src/: CMakeLists.txt  environment.cpp
libs/fox_wsi/: CMakeLists.txt
libs/fox_wsi/include/fox/: wsi.hpp
libs/fox_wsi/src/: CMakeLists.txt  keyboard.cpp  keyboard.hpp  mouse.cpp  mouse.hpp  window.cpp
src/: CMakeLists.txt  engine.cpp
